kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ws-graphql-bff
  labels:
    app: ws-graphql-bff
    kind: deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ws-graphql-bff
  template:
    metadata:
      labels:
        app: ws-graphql-bff
    spec:
      containers:
        - name: ws-graphql-bff
          image: hataketed/ws-graphql-bff:2.2.2
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ws-graphql-bff
  labels:
    spring-boot: "true"
    kind: service
spec:
  type: NodePort
  selector:
    app: ws-graphql-bff
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
